# Fluid-Stencil

./: CMakeLists.txt  README.md  submission.md
resources/shaders/: shader.frag  shader.vert
src/: fluidsim.cpp  fluidsim.h  glwidget.cpp  glwidget.h  grid.cpp  grid.h  gridrenderer.cpp  gridrenderer.h  main.cpp  simulation.cpp  simulation.h  test.cpp  window.cpp  window.h
src/graphics/: shape.cpp  shape.h
